Rewrite create user api with vertx